--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<!-- Write your code here! -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test Document</title>
+</head>
+<body>
+    <h1>Test Heading</h1>
+    <p>
+        This is a paragraph with a <strong>strong</strong> tag,
+        an <em>emphasis</em> tag, and a link to 
+        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">MDN Web Docs</a>.
+    </p>
+    <table>
+        <tr>
+            <th>Header</th>
+        </tr>
+        <tr>
+            <td>Data</td>
+        </tr>
+    </table>
+</body>
+</html>
